structmeta-tests/tests/compile_fail/struct_meta/option_flag.stderr
error[E0277]: the trait bound `structmeta::Flag: Parse` is not satisfied
 --> $DIR/option_flag.rs:3:10
  |
3 | #[derive(structmeta::StructMeta)]
  |          ^^^^^^^^^^^^^^^^^^^^^^ the trait `Parse` is not implemented for `structmeta::Flag`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
